--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,17 @@
     ],
     "require": {
         "composer/installers": "^1.9",
+        "drupal/admin_toolbar": "^3.0",
         "drupal/bootstrap_layout_builder": "^2.0",
         "drupal/bootstrap_styles": "^1.0",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
-        "drupal/layout_builder_blocks": "^1.0"
+        "drupal/ctools": "^3.7",
+        "drupal/layout_builder_blocks": "^1.0",
+        "drupal/metatag": "^1.16",
+        "drupal/pathauto": "^1.8",
+        "drupal/token": "^1.9"
     },
     "conflict": {
         "drupal/drupal": "*"
