--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,31 @@
         "drupal/admin_toolbar": "^3.0",
         "drupal/bootstrap_layout_builder": "^2.0",
         "drupal/bootstrap_styles": "^1.0",
+        "drupal/captcha": "^1.2",
+        "drupal/ckeditor_codemirror": "^2.3",
+        "drupal/colorbutton": "^1.3",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
         "drupal/ctools": "^3.7",
+        "drupal/editor_advanced_link": "^2.0",
+        "drupal/editor_file": "^1.5",
+        "drupal/entity": "^1.2",
+        "drupal/google_analytics": "^3.1",
         "drupal/layout_builder_blocks": "^1.0",
         "drupal/metatag": "^1.16",
+        "drupal/moderation_sidebar": "^1.4",
+        "drupal/panelbutton": "^1.4",
         "drupal/pathauto": "^1.8",
-        "drupal/token": "^1.9"
+        "drupal/redirect": "^1.6",
+        "drupal/smtp": "^1.0",
+        "drupal/social_api": "^3.0",
+        "drupal/social_auth_facebook": "^3.0",
+        "drupal/social_auth_google": "^3.0@RC",
+        "drupal/social_auth_instagram": "^3.0",
+        "drupal/svg_formatter": "^1.14",
+        "drupal/token": "^1.9",
+        "drupal/xmlsitemap": "^1.0"
     },
     "conflict": {
         "drupal/drupal": "*"
