--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,14 @@
     "require": {
         "composer/installers": "^1.9",
         "drupal/admin_toolbar": "^3.0",
+        "drupal/better_exposed_filters": "^5.0@beta",
         "drupal/bootstrap": "^3.23",
         "drupal/bootstrap_layout_builder": "^2.0",
         "drupal/bootstrap_styles": "^1.0",
         "drupal/captcha": "^1.2",
         "drupal/ckeditor_codemirror": "^2.3",
+        "drupal/ckeditor_templates": "^1.2",
+        "drupal/ckeditor_templates_ui": "^1.4",
         "drupal/colorbutton": "^1.3",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
@@ -36,7 +39,9 @@
         "drupal/moderation_sidebar": "^1.4",
         "drupal/panelbutton": "^1.4",
         "drupal/pathauto": "^1.8",
+        "drupal/quicklink": "^1.3",
         "drupal/redirect": "^1.6",
+        "drupal/select2": "^1.13",
         "drupal/smtp": "^1.0",
         "drupal/social_api": "^3.0",
         "drupal/social_auth_facebook": "^3.0",
@@ -44,6 +49,7 @@
         "drupal/social_auth_instagram": "^3.0",
         "drupal/svg_formatter": "^1.14",
         "drupal/token": "^1.9",
+        "drupal/webp": "^1.0@beta",
         "drupal/xmlsitemap": "^1.0"
     },
     "conflict": {
