--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,16 @@
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
+        "drupal/csp": "^1.15",
         "drupal/ctools": "^3.7",
+        "drupal/devel": "^4.1",
+        "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.0",
         "drupal/editor_file": "^1.5",
         "drupal/entity": "^1.2",
+        "drupal/eu_cookie_compliance": "^1.14",
         "drupal/google_analytics": "^3.1",
+        "drupal/google_tag": "^1.4",
         "drupal/layout_builder_blocks": "^1.0",
         "drupal/metatag": "^1.16",
         "drupal/moderation_sidebar": "^1.4",
@@ -41,6 +46,8 @@
         "drupal/pathauto": "^1.8",
         "drupal/quicklink": "^1.3",
         "drupal/redirect": "^1.6",
+        "drupal/restui": "^1.20",
+        "drupal/robotstxt": "^1.4",
         "drupal/select2": "^1.13",
         "drupal/smtp": "^1.0",
         "drupal/social_api": "^3.0",
@@ -50,7 +57,8 @@
         "drupal/svg_formatter": "^1.14",
         "drupal/token": "^1.9",
         "drupal/webp": "^1.0@beta",
-        "drupal/xmlsitemap": "^1.0"
+        "drupal/xmlsitemap": "^1.0",
+        "drush/drush": "^10.6"
     },
     "conflict": {
         "drupal/drupal": "*"
